--- a/LenguajeFrontEnd4Semestre2024/HTML/Leccion01/index.html
+++ b/LenguajeFrontEnd4Semestre2024/HTML/Leccion01/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca De</title>
+<!DOCTYPE html> <!-- Declara el tipo de documento como HTML5 -->
+<html lang="en"> <!-- Inicia el documento HTML y especifica el idioma como inglés -->
+<head> <!-- Contiene metadatos sobre el documento -->
+    <meta charset="UTF-8"> <!-- Define la codificación de caracteres como UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Establece el diseño responsivo para dispositivos móviles -->
+    <title>Document</title> <!-- Define el título del documento que aparece en la pestaña del navegador -->
 </head>
-<body>
-
-
+<body> <!-- Cuerpo del documento, donde se coloca el contenido visible -->
+    
 </body>
 </html>
