--- a/LenguajeFrontEnd4Semestre2024/CSS/Leccion01/index.html
+++ b/LenguajeFrontEnd4Semestre2024/CSS/Leccion01/index.html
@@ -66,6 +66,9 @@
         </ul>
     </nav>
 
+    <div>
+        <p class="bordado">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui eligendi ut tempora nisi omnis culpa neque tenetur ipsa, rem vitae repellat autem reprehenderit, non magnam ea, tempore ullam commodi enim!</p>
+    </div>
 </body>
 </html>
 
