--- a/LenguajeFrontEnd4Semestre2024/CSS/PracticaPeriodicoExtra/index.html
+++ b/LenguajeFrontEnd4Semestre2024/CSS/PracticaPeriodicoExtra/index.html
@@ -35,61 +35,61 @@
         <section class="sectionPrincipal">
                 <header class="poppins-bold"><h1>Guayaquil</h1></header>
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
                         <img src="img/asesinato1.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
-                        <img src="img/asesinato1.jpg" alt="">
+                        <img src="img/asesinato2.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
-                        <img src="img/asesinato1.jpg" alt="">
+                        <img src="img/asesinato3.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
-                        <img src="img/asesinato1.jpg" alt="">
+                        <img src="img/asesinato4.jfif" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
-                        <img src="img/asesinato1.jpg" alt="">
+                        <img src="img/aesinato5.jfif" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
-                        <img src="img/asesinato1.jpg" alt="">
+                        <img src="img/asesinato6.jpeg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
@@ -97,67 +97,69 @@
                 <header><h1>Cuenca</h1></header>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
                         <img src="img/asesinato1.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
                         <img src="img/asesinato1.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
                         <img src="img/asesinato1.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
                         <img src="img/asesinato1.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
                         <img src="img/asesinato1.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
                 </section>
 
                 <section class="tercerSection">
-                    <header><h2>Isla Trinitaria</h2></header>
+                    <header class="poppins-bold"><h2>Isla Trinitaria</h2></header>
                     <article>
                         <img src="img/asesinato1.jpg" alt="">
                     </article>
-                    <article>
+                    <article class="roboto-bold">
                         <a href="">Muerte en la Isla Trinitaria</a>
                     </article>
-                </section>
-
+                </section>        
         </section>
 
+        <footer class="poppins-bold">
+            EXTRA.ec
+        </footer>
 
     </main>
 
